syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "WebApi.Grpc";

package location;

service LocationGrpcService {
	rpc GetLocation (LocationRequest) returns (LocationReply);
    rpc GetLocations (google.protobuf.Empty) returns (LocationsReply);
    rpc AddLocation (LocationAddRequest) returns (ActionReply);
    rpc UpdateLocation (LocationEditRequest) returns (ActionReply);
    rpc DeleteLocation (LocationRequest) returns (ActionReply);
}

message LocationRequest {
	string location_id = 1;
}

message LocationAddRequest {
    string location_name = 1;
    string street_address = 2;
    string postal_code = 3;
    string city_name = 4;
    string map_id = 5;
    string car_direction = 6;
    string metro_direction = 7;
    string bus_direction = 8;
}

message LocationUpdateRequest {
    string id = 1;
    string location_name = 2;
    string street_address = 3;
    string postal_code = 4;
    string city_name = 5;
    string map_id = 6;
    string car_direction = 7;
    string metro_direction = 8;
    string bus_direction = 9;
}

message ActionReply {
	bool succeeded = 1;
	int32 status_code = 2;
    string message = 3;
}

message LocationReply {
	bool succeeded = 1;
	int32 status_code = 2;
    string message = 3;
    Location location = 4;
}

message LocationsReply {
	bool succeeded = 1;
	int32 status_code = 2;
    string message = 3;
    repeated Location locations = 4;
}

message Location {
    string id = 1;
    string location_name = 2;
    string street_address = 3;
    string postal_code = 4;
    string city_name = 5;
    string map_id = 6;
    string car_direction = 7;
    string metro_direction = 8;
    string bus_direction = 9;
}