syntax = "proto3"

option csharp_namespace = "WebApi.Grpc"

package locations;

service LocationService {
	rpc GetLocation (LocationRequest) returns (LocationReply);
    rpc GetLocations () returns (LocationsReply);
    rpc AddLocation () returns (ActionReply);
    rpc UpdateLocation () returns (ActionReply);
    rpc DeleteLocation (LocationRequest) returns (ActionReply);
}

message LocationRequest {
	string location_id = 1;
}

message ActionReply {
	bool succeeded = 1;
	int status_code = 2;
}

message LocationReply {
	bool succeeded = 1;
	int status_code = 2;
    Location location = 3;
}

message LocationsReply {
	bool succeeded = 1;
	int status_code = 2;
    repeated Location locations = 3;
}

message Location {
    string Id = 1;
    string LocationName = 2;
    string StreetAddress = 3;
    string PostalCode = 4;
    string CityName = 5;
    string MapId = 6;
    string CarDirection = 7;
    string MetroDirection = 8;
    string BusDirection = 9;
}